kyverno-cilium-policy-chain/demo/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good
  namespace: team-a
  labels:
    app: good
spec:
  containers:
    - name: echo
      image: ealen/echo-server:0.9.2
      ports:
        - containerPort: 80
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 1000
      resources:
        requests: {cpu: 10m, memory: 32Mi}
        limits: {memory: 64Mi}
